# typocaml

./: README.md  dune-project  index.html  typocaml.opam
.github/workflows/: deploy-docs.yml
src/: dune  log.ml  str_zipper.ml  str_zipper.mli  typocaml.ml  typocaml.mli
tests/: dune  test_dict.expected  test_dict.ml
typocaml/: index.html
typocaml/Typocaml/: index.html
typocaml/Typocaml/Log/: index.html
